# photon_FTLE

./: CMakeLists.txt  ftle.cpp  ftle.h  geometry.cpp  gradient.cpp  main.cpp  myMath.cpp  myMath.h  output.cpp  paraview-state0.pvsm  photonParticipate.cpp  photonSetting.cl  photonSetting.cpp  variables.cpp  variables.h  visResult.cpp
outputs/: normOfGradient.csv  state0.pvd
